Check for front-back end connection

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <title>Student Placement Portal</title>
 </head>
 <body>
+    <a href="/s/auth" >Login</a>
     <h2>Hello World!!</h2>
     <h1>Welcome to Student Placement Portal 2024</h1>
 </body>
