--- a/views/error.ejs
+++ b/views/error.ejs
@@ -28,6 +28,7 @@
 </head>
 <body>
     <div class="container">
+        <a href="/update">Update Data</a>
         <h1>404 Not Found</h1>
         <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
         <p><a href="/">Go to Home Page</a></p>
